Cycles MotionBlur seems to mess up vectors in recent trunk #34880

Closed
opened 2013-04-05 13:56:52 +02:00 by Sebastian Koenig · 3 comments

%%%--- Operating System, Graphics card ---
OSX 10.8.3, GTX 660ti

- Blender version with error, and version that worked ---

r55806, 2.66a release works correctly

- Short description of error ---

Using MotionBlur in Cycles seems to mess up the vectors. A rig of the Tears of Steel Quadbot looks correct in the viewport, but on rendering it gets messed up completely. Turning off MotionBlur fixes that. This does not happen in 2.66a.
I tried to comeup with a simplified file, but couldn't quickly redo the bug. So I attached a file with the quadbot. (I hope there's no problem with paths...)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached example press render and it will render the object almost completely out of view. The camera is animated. If you press Alt+I on the current frame to get rid of camera movement the quadbot is visible in render. But still the rig renders differently than if you render without motion blur. (for example see the floating screws below left rear foot.) Both does not happen in 2.66a.
%%%

%%%--- Operating System, Graphics card --- OSX 10.8.3, GTX 660ti - Blender version with error, and version that worked --- r55806, 2.66a release works correctly - Short description of error --- Using MotionBlur in Cycles seems to mess up the vectors. A rig of the Tears of Steel Quadbot looks correct in the viewport, but on rendering it gets messed up completely. Turning off MotionBlur fixes that. This does not happen in 2.66a. I tried to comeup with a simplified file, but couldn't quickly redo the bug. So I attached a file with the quadbot. (I hope there's no problem with paths...) - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the attached example press render and it will render the object almost completely out of view. The camera is animated. If you press Alt+I on the current frame to get rid of camera movement the quadbot is visible in render. But still the rig renders differently than if you render without motion blur. (for example see the floating screws below left rear foot.) Both does not happen in 2.66a. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34880
No description provided.