Fix #34880: cycles motion blur render issue with some compilers. Actually is a bigger problem where accessing float4 members with [] stops working due to optimizer, will check that later.