intern/cycles/util/util_transform.cpp
@@ -155,7 +155,7 @@ Transform transform_inverse(const Transform& tfm)
 
 /* Motion Transform */
 
-static float4 transform_to_quat(const Transform& tfm)
+float4 transform_to_quat(const Transform& tfm)
 {
 	double trace = tfm[0][0] + tfm[1][1] + tfm[2][2];
 	float4 qt;
